--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,4 +6,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/struts?useSSL=false
     username: root
+  mvc.view:
+      prefix: /WEB-INF/
+      suffix: .jsp
 
